[package]
name = "libparted-sys"
version = "0.3.0"
authors = ["Chris Holcombe <xfactor973@gmail.com>"]
license = "MIT"
description = "libparted bindings"
documentation = "https://docs.rs/libparted-sys"
homepage = "https://github.com/cholcombe973/libparted-sys"
keywords = ["parted", "libparted"]


[build-dependencies]
bindgen = "~0.53"

[dependencies]

